--- a/document/Logstash.conf
+++ b/document/Logstash.conf
@@ -1,5 +1,4 @@
-input
-
+================input================
 ## 读取文件
 file {
           path => "/home/logs/*.log"
@@ -101,7 +100,7 @@ lumberjack {
           ssl_key => "/etc/logstash/server.key"
           type => "forwarder"
 }
-filter
+================filter================
 ##clone字段
 clone {
           clones => ["msg_clone"]
@@ -344,7 +343,7 @@ elapsed {
         end_tag => "Ended"
         unique_id_field => "operation"
 }
-output 
+================output================
 ## Elasticsearch单机版
 elasticsearch {
           protocol => "http"
